# stm32-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fetch_svd.cmake  install_toolchain.sh  main.cpp
PS Scripts/: attach_st_link.ps1  detach_st_link.ps1
tools/: fetch_svd.cmake
